5.1
	+ Adapt to Ubuntu 16.04
	+ Use HTTPS for VNC webserver
	+ Adapted to new CSS styles and replaced some icons
3.1.3
	+ Added menu icon
	+ Request user confirmation when clicking remove virtual machine button
	+ Do not check for r/rw perms on disks as libvirt automatically fixes them
	+ Bridges already used are skipped instead of reused to avoid conflicts
	+ Delete unsued bridges once deleted
	+ Check for existing libvirt networks using test on files definition
	  insted of virsh net-list which was buggy
	+ Removed no longer necessary jQuery noConflict()
3.1.2
	+ Ported JS code to jQuery
3.1.1
	+ Remove deprecated backup domains methods
	+ More descriptive names for the windows types of virtual machines
	+ Do not stop VNC proxies before VMs are stopped
	+ Always try to shutdown VMs first and then destroy after 30 seconds
	+ Fix Qemu keymap detection when having UTF-8 environment
3.1
	+ Removed 3.0.X migration code
	+ Depend on zentyal-core 3.1
3.0.5
	+ Reload the page after saving changes if a VM has been modified
	+ Added calls to generate VM stop alerts on module stop
	+ Added calls to methods to generate alerts on VM start/stop
3.0.4
	+ Use shutdown command instead of halt in Windows systems
	+ Allow to use host CD drive
	+ Add VNC bar height to calculate VNC viewer frame height
	+ Use 'tablet' device type for pointing device on Windows machines
	  to avoid cursor offset
	+ Allow '_' and '-' in devices paths
3.0.3
	+ Added missing architectureTypes method to VBox backend
	+ Forced MAC prefix to workaround libvirt bug
3.0.2
	+ Operating System type can now be specified on each VM
	+ Windows Vista or newer machines use SATA disks
	+ Windows 2000 or older machines use IDE disks
	+ Linux machines use virtio disks
	+ Other machines use SCSI disks for compatibility with the
	  previous default, but can use IDE setting the use_ide_disks
	  key in /etc/zentyal/virt.conf as before
	+ Better checking of device path
3.0.1