@@ -45,3 +45,5 @@ vm_max = 32
 # chown ebox:ebox /var/lib/zentyal/conf/vnc-passwd
 # chmod 600 /var/lib/zentyal/conf/vnc-passwd
 
+# Open noVNC virtual console on a new window
+view_console_new_window = no
