@@ -1,3 +1,5 @@
+HEAD
+	+ Add view_console_new_window config key
 5.1
 	+ Adapt to Ubuntu 16.04
 	+ Use HTTPS for VNC webserver
